k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ims-namespace
  labels:
    name: ims-namespace
