k8s/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service
  namespace: ims-namespace
spec:
  selector:
    app: alertmanager
  ports:
    - protocol: TCP
      port: 9093
      targetPort: 9093
  type: ClusterIP
