k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ims-postgres
spec:
  serviceName: "ims-postgres"
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
  selector:
    matchLabels:
      app: ims-postgres
  template:
    metadata:
      labels:
        app: ims-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ims-postgres
spec:
  selector:
    app: ims-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
